# hermes-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
hermes/: __init__.py
hermes/core/: __init__.py
hermes/core/commander/: __init__.py  contracts.py  errors.py  events.py  interface.py  models.py  service.py
hermes/core/event_bus/: __init__.py  in_memory.py  interface.py  models.py
hermes/core/state_manager/: README.md  __init__.py  errors.py  events.py  interface.py  models.py  service.py
hermes/core/supervisor/: __init__.py  contracts.py  events.py  interface.py  models.py  policy.py  service.py
hermes/demos/: __init__.py
hermes/demos/research_brief/: README.md  __init__.py  cli.py  mock_research_adapter.py  runner.py  workflow.py
hermes/modules/: __init__.py
hermes/modules/application_framework/: README.md  __init__.py  contracts.py  errors.py  events.py  interface.py  models.py  service.py
hermes/modules/application_registry/: README.md  __init__.py  contracts.py  errors.py  events.py  interface.py  models.py  service.py
hermes/modules/capability_registry/: README.md  __init__.py  capabilities.py  contracts.py  errors.py  events.py  interface.py  models.py  service.py  strategies.py
hermes/modules/configuration_manager/: README.md  __init__.py  errors.py  events.py  interface.py  models.py  service.py  sources.py
hermes/modules/context_builder/: README.md  __init__.py  contracts.py  errors.py  events.py  (+3 more)
hermes/skills/: README.md  __init__.py  contracts.py  errors.py  interface.py  models.py  service.py
(+249 files in other folders)
